--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -83,6 +83,9 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  font-family: Arial, sans-serif;
+  font-size: 15px;
+
 }
 
 body {
@@ -93,6 +96,13 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+}
+
+li {
+  margin: 0px 0;
+  border: 1px solid #39444d;
+  max-width: 600px;
+  padding: 15px;
 }
 
 a {
