--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -84,8 +84,7 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
   font-family: Arial, sans-serif;
-  font-size: 15px;
-
+  font-size: 13px;
 }
 
 body {
@@ -103,6 +102,13 @@ li {
   border: 1px solid #39444d;
   max-width: 600px;
   padding: 15px;
+}
+
+p {
+  margin-top: 13px;
+  /* margin: 11px 0; */
+  padding: 0px;
+  font-size: 12px;
 }
 
 a {
