--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -121,6 +121,29 @@ p {
   font-size: 12px;
 }
 
+
+img {
+  margin-right: 5px;
+  /* border: 1px solid #90a3b3; */
+  /* border-radius: 30px; */
+}
+
+.imgavatar {
+  margin-right: 5px;
+  /* border: 1px solid #90a3b3; */
+  border-radius: 30px;
+}
+
+.imgborder {
+  margin-top: 10px;
+  margin-right: 10px;
+  border: 1px solid #90a3b3;
+  border-radius: 6px;
+  /* margin-bottom: 10px; */
+  /* max-width: 100%; */
+  /* height:auto; */
+}
+
 a {
   color: inherit;
   text-decoration: none;
